<resources>
    <string name="app_name">Article Quiz</string>
    <string name="action_settings">Settings</string>
    <string name="questionID">Question %1$d of %2$d.</string>
    <string name="prev">PREV</string>
    <string name="next">NEXT</string>
    <string name="article_a">A</string>
    <string name="article_an">AN</string>
    <string name="not_sure">NOT SURE</string>
    <string name="error_loading_question">Error loading question</string>
    <string name="error_selecting_questions">Error selecting questions</string>
    <string name="index_error">Error selecting question with index</string>
    <string name="cat">_______ cat</string>
    <string name="confirm_submit">Confirm submit?</string>
    <string name="confirm_submit_title">Submit</string>
    <string name="button_submit">Submit</string>
    <string name="button_cancel_submit">Don\'t submit</string>
    <string name="submit_button">SUBMIT</string>
    <string name="score_detail">Your score: %1$d \n Total Question: %2$d</string>
    <string name="retake_quiz_text">RETAKE QUIZ</string>
    <string name="your_score">SCORE</string>
    <string name="retake_quiz_message">Click Start to begin</string>
    <string name="start">START</string>
    <string name="button_learn_articles">Learn Articles</string>
    <string name="button_take_quiz">Take quiz</string>
</resources>
