<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivityFragment"
    android:orientation="vertical"
    android:id="@+id/article_quiz_layout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/questionID"
        android:id="@+id/questionID_textView"
        android:layout_gravity="center"
        android:padding="@dimen/activity_horizontal_margin" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/question_textView"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textAlignment="gravity"
            android:gravity="center_vertical|center_horizontal" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:id="@+id/options_radioGroup"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/article_a"
            android:id="@+id/optA_radioButton"
            android:layout_weight="1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/article_an"
            android:id="@+id/optB_radioButton"
            android:layout_weight="1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_sure"
            android:id="@+id/optC_radioButton"
            android:layout_weight="1" />

    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.17"
        android:padding="@dimen/activity_horizontal_margin">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prev"
            android:id="@+id/prev_button"
            android:layout_weight="1"
            android:layout_gravity="left|center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/next_button"
            android:layout_weight="1"
            android:layout_gravity="center|right" />
    </LinearLayout>

</LinearLayout>
