<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.gbogboade.articlequiz.LauncherActivity"
    android:orientation="vertical"
    android:background="@color/launcher_background_color"
    android:id="@+id/main_layout">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:id="@+id/app_info_layout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:id="@+id/imageView"
            android:layout_weight="1.5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/app_name"
            android:id="@+id/textView"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:textAlignment="gravity"
            android:textStyle="normal|italic"
            android:textSize="@dimen/app_name_textview_in_launcher_text_size_" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:id="@+id/access_button_layout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_learn_articles"
            android:id="@+id/learn_article_button"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_vertical_margin" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_take_quiz"
            android:id="@+id/take_quiz_button"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />
    </LinearLayout>

</LinearLayout>
